Add jpms support to the webdav component